
2012-May-19 Struan Robertson

	* Spline.cpp/.h, UnitTest.cpp: Added test for spline class and fixed 
	bugs in spline class.
	
2012-May-14 Struan Robertson

	* Spline.cpp/.h: Initial revision of Spline class added.
	
2012-May-04 Struan Robertson

	* DefinedSumOfStates.cpp: Code added to parse data in XML structures.
	
	* FittingUtils.cpp/.h: Redundant code removed.

2012-April-22 Struan Robertson

	* Documentation changes following update for derived parameters.
	
2012-April-11 Struan Robertson

	* ExponentialDown.cpp, MesmerILT.cpp: Fix for constrained value string
	mapping bug.
	
	* Add Linux64 baseline for UnitTest.xml smoke test.
	
2012-April-09 Struan Robertson

	* UnitTests.cpp, MesmerMaths.h/.cpp: Added unit test for incomplete 
	gamma function (chi2 signifcance test) and corrected gamma function
	method. New MesmerQA tests added.
	
	* DefinedSumOfStates.cpp: Initial implementation of of the 
	defined transition states sum of states SumOfStates method  and 
	sample input file.
	
2012-April-01 Chris Morley

	* src/Rdouble.cpp, src/Rdouble.h, src/System.cpp: change xml syntax for
	linked variables.Most of the code is now in Rdouble class
	
	* src/plugins/FittingUtils.cpp, src/plugins/FittingUtils.h,
	* src/plugins/Marquardt.cpp: ...and removed from here.

	* src/plugins/HinderedRotorQM1D.cpp: format changes in cinfo output

	* src/MolecularComponents.cpp: remove outdated comment

2012-March-25 Struan Robertson

	* Project and Makefile updates for new classes.

	* Baselines updates.
	  
2012-March-24 Struan Robertson

	* DefinedSumOfStates.cpp: New class added to read, e.g. FTST sums of states.
	  
	* UnitTests.cpp: New class added to allow the running of internal checks.  

	* examples: Added HO + NO -> HONO example.  

2012-March-24 Struan Robertson

	* Documentation update: Material added regarding parameter constraints.  

2012-March-21 Struan Robertson

	* FittingUtil.cpp/.h, Rdouble.cpp/.h: Simplified parameter constraint 